--- a/products.html
+++ b/products.html
@@ -270,7 +270,7 @@
             <p>لاسلكية — BT / 2.4GHz / USB-C</p>
           </a>
           <a href="product-soundforce.html" class="product-tab">
-            <img src="assets/images/sound-force-red.svg" alt="Sound Force" loading="lazy" />
+            <img src="assets/images/sound-force-red.jpg" alt="Sound Force" loading="lazy" />
             <span class="badge available">متوفرة</span>
             <h3>Sound Force</h3>
             <p>سلكية USB — 7.1 محيطي</p>
