--- a/soundforce.html
+++ b/soundforce.html
@@ -548,7 +548,7 @@
           </div>
 
           <div class="hero-media">
-            <img src="assets/images/sound-force-red.svg" alt="سماعة INFINITEX Sound Force باللون الأحمر" loading="lazy" />
+            <img src="assets/images/sound-force-red.jpg" alt="سماعة INFINITEX Sound Force باللون الأحمر" loading="lazy" />
           </div>
 
           <div class="btn-row">
